--- a/index.html
+++ b/index.html
@@ -79,6 +79,7 @@
                      <div class="list"><span>work</span><span>:</span><span>qa-engineer</span></div>
                      <div class="list"><span>Power</span><span>:</span><span>Rangers</span></div>
                      <div class="list"><span>location</span><span>:</span><span>UFA</span></div>
+                     <div class="list"><span>QA</span><span>Engineer</span></div>
 
                   </div>
                </div>
